# TagDriver

./: Cargo.toml  README.md  TagDriver.code-workspace  codegen.sh  tagDaemon.code-workspace
src/: log.rs  main.rs  state.rs
src/dbus/: dbus_interface.rs  interface.rs  mod.rs  networkmanager.rs  playerctld.rs  thread.rs
src/display/: bwr_color.rs  bwr_display.rs  mod.rs
src/display/components/: bar_dialog.rs  image_background.rs  mod.rs  simple_item.rs  state_item.rs  workspace_indicator.rs
src/eink/: interface.rs  mod.rs  thread.rs  uart_interface.rs
src/state/: app.rs  mod.rs  value.rs
src/zbus_interface/: mod.rs  playerctld.rs
