[package]
name = "tag_daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
daemonize = "0.5.0"
dbus = "0.9.7"
dbus-tokio = "0.7.6"
debug_print = "1.0.0"
embedded-graphics = "0.8.1"
embedded-graphics-simulator = "0.5.0"
futures-util = "0.3.28"
itertools = "0.11.0"
profont = "0.7.0"
serialport = "4.2.2"
tokio = { version = "1.33.0", features = [
    "rt",
    "sync",
    "time",
    "macros",
    "rt-multi-thread",
] }
tokio-serial = { version = "5.4.4", features = ["rt"] }
tokio-stream = "0.1.14"

# [features]
# default = ["skia-safe/gl", "skia-safe/wayland", "skia-safe/textlayout"]
