[package]
name = "tag_driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.4"
dbus = {version = "0.9.7", features = ["futures"]}
dbus-crossroads = "0.5.2"
dbus-tokio = "0.7.6"
debug_print = "1.0.0"
embedded-canvas = "0.3.0"
embedded-graphics = "0.8.1"
embedded-graphics-simulator = "0.6.0"
embedded-icon = { version = "0.0.1", features = [
    "32px",
    "48px",
    #"96px",
    "mdi",
], default-features = false }
enum_primitive = "0.1.1"
futures-util = "0.3.28"
image = "0.24.7"
itertools = "0.12.0"
networkmanager = { git = "https://github.com/exit91/networkmanager-rs.git" }
profont = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
serialport = "4.2.2"
thiserror = "1.0.50"
tinybmp = "0.5.0"
tokio = { version = "1.35.1", features = [
    "rt",
    "sync",
    "time",
    "macros",
    "rt-multi-thread",
] }
tokio-serial = { version = "5.4.4", features = ["rt"] }
tokio-stream = "0.1.14"
